--- a/src/app/heroes.component.html
+++ b/src/app/heroes.component.html
@@ -10,4 +10,5 @@
     <h2>
         {{selectedHero.name | uppercase}} is my hero
     </h2>
+    <button (click)="gotoDetail()">View Details</button>
 </div>
