--- a/src/app/hero-detail.component.html
+++ b/src/app/hero-detail.component.html
@@ -1,4 +1,4 @@
-﻿<div *ngIf="hero">
+<div *ngIf="hero">
     <h2>{{hero.name}} details!</h2>
     <div><label>id: </label>{{hero.id}}</div>
     <div>
@@ -6,4 +6,5 @@
         <input [(ngModel)]="hero.name" placeholder="name" />
     </div>
     <button (click)="goBack()">Back</button>
+    <button (click)="save()">Save</button>
 </div>
